argo-rollout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-stable
  namespace: flask
  labels:
    app: flask
spec:
  selector:
    app: flask
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort : 8080 # container port
---
apiVersion: v1
kind: Service
metadata:
  name: flask-canary
  namespace: flask
  labels:
    app: flask
spec:
  selector:
    app: flask
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort : 8080 # container port
---
apiVersion: v1
kind: Service
metadata:
  name: flask-root
  namespace: flask
  labels:
    app: flask
spec:
  selector:
    app: flask
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort : 8080 # container port
